# Amazon-Asteroids

./: README.md
AmazonCodingExcercise/: Instructions.txt  how_to_build.txt  setup_linux.sh  setup_mac.sh  setup_win.bat
AmazonCodingExcercise/asteroids/: CMakeLists.txt  feedback.txt  worklog.txt
AmazonCodingExcercise/asteroids/code/: ai_controller.cpp  ai_controller.h  asteroids.cpp  asteroids.h  drawer.cpp  drawer.h  main.cpp  main.h  object.cpp  object.h  player_controller.cpp  player_controller.h  ship.cpp  ship.h  texture_instance.cpp  texture_instance.h  textures.cpp  textures.h  timed_image.h  vector2int.h
